--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,6 @@
 <div class="field">
   <div class="card-stack">
+    <!-- Card stack -->
     <img
       *ngFor="let c of [0, 1, 2, 3]; let i = index"
       [ngStyle]="{ 'right.px': i * 5 }"
@@ -12,7 +13,10 @@
       style="right: 25px"
       src="/assets/img/cards/card_cover.png"
       alt=""
-    />
+    />    
+    <!-- Stack for played cards -->
+    <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}.png" alt="">
+    <!-- Current card (Animation) -->
     <img
       (click)="takeCard()"
       *ngIf="pickCardAnimation"
