--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,8 @@
 
 
-<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100+(i*120)}" [name]="player" class="player-postion"></app-player>
+<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100+(i*90)}" 
+[playerActive]="i == game.currentPlayer" 
+[name]="player" class="player-postion"></app-player>
 
 <div class="field">
   <div class="card-stack">
@@ -29,5 +31,11 @@
       src="/assets/img/cards/{{ currentCard }}.png"
       alt=""
     />
-  </div>
+  </div> 
 </div>
+
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+  <mat-icon>add</mat-icon>
+</button>
