--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -56,3 +56,19 @@
   position: absolute;
   right: 0;
 }
+
+.btn-add{
+  position: absolute;
+  right: 32px;
+  bottom:32px;
+}
+
+.pin-bottom {
+  position: absolute;
+  bottom: 32px;
+  left: 100px;
+  right: 100px;
+
+
+}
+
