--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -11,14 +11,18 @@
     margin-left: 16px;
   }
   
-  background-color: orange;
+  background-color: rgba(50, 50, 50, 0.5);
   border-top-left-radius:50px;
   border-bottom-left-radius: 50px;
 
   img{
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
     object-fit:cover ;
     border-radius: 100%;
   }
+}
+
+.player-active{
+  background-color: orange !important;
 }
