--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,8 +1,12 @@
-
-
 <app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100+(i*90)}" 
 [playerActive]="i == game.currentPlayer" 
-[name]="player" class="player-postion"></app-player>
+[name]="player" class="player-postion hide-mobile"></app-player>
+
+<div class="scroll-container hide-desktop">
+<app-player-mobile *ngFor="let player of game.players; let i = index"  
+[playerActive]="i == game.currentPlayer" 
+[name]="player" ></app-player-mobile>
+</div>
 
 <div class="field">
   <div class="card-stack">
