--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,67 +1,64 @@
-.field{
+.field {
   width: 100vw;
   height: 100vh;
   max-width: 100%;
-  background-image: url('../../assets/img/wood-plate.jpg');
+  background-image: url("../../assets/img/wood-plate.jpg");
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.card-stack{
+.card-stack {
   position: relative;
-  img{
-    position:absolute;
+  img {
+    position: absolute;
     width: 120px;
   }
-  
-
 }
 
-.top-card{
+.top-card {
   cursor: pointer;
   transition: all 125ms ease-in-out;
-  &:hover{
+  &:hover {
     transform: scale(1.1) translateY(-10px);
   }
-}  
+}
 
-.played-card{
+.played-card {
   right: 25px;
   transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
 }
 
-.pick-card{
+.pick-card {
   animation: pick-card-animation 1s ease-in-out !important;
   transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
-
 }
 
 @keyframes pick-card-animation {
-  0%{
-    transform: scale(1) ;
+  0% {
+    transform: scale(1);
   }
-  40%{
+  40% {
     transform: scale(1.7);
   }
-  60%{
+  60% {
     transform: scale(1.7);
   }
-  100%{
+  100% {
     transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
   }
 }
 
-.player-postion{
+.player-postion {
   position: absolute;
   right: 0;
   z-index: 1;
 }
 
-.btn-add{
+.btn-add {
   position: absolute;
   right: 32px;
-  bottom:32px;
+  bottom: 32px;
 }
 
 .pin-bottom {
@@ -70,6 +67,23 @@
   left: 100px;
   right: 100px;
 
-
+  @media (max-width: 720px) {
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 }
 
+.scroll-container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+
+  app-player-mobile{
+    margin-left: 8px; 
+  }
+}
